# bachelorthesis-gaenext-prototype

./: .gitignore  Cargo.toml  README.md  conf.sh  run.sh
client/: Cargo.toml
client/src/: handler.rs  listener.rs  lpc.rs  main.rs  state.rs  updater.rs
configs/: configurator.yaml
configurator/: Cargo.toml
configurator/src/: args.rs  config.rs  error.rs  lib.rs  main.rs  verification.rs
diagnosisserver/: Cargo.toml
diagnosisserver/src/: actor.rs  handler.rs  main.rs  state.rs
exposurelib/: Cargo.toml
exposurelib/src/: args.rs  client_state.rs  config.rs  diagnosis_server_state.rs  error.rs  lib.rs  logger.rs  primitives.rs  rpcs.rs  time.rs
preconfigured/: multipath_demo.yaml  simple_demo.yaml  two_ssevs_demo.yaml
runner/: Cargo.toml
runner/src/: args.rs  main.rs
