[package]
name = "client"
version = "0.1.0"
authors = ["Leo <lstwn@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exposurelib = { path = "../exposurelib" }
anyhow = "1.0.38"
serde_yaml = "0.8.16"
futures = "0.3"
serde = { version = "1.0" }
tokio = { version = "1.3.0", features = ['full'] }
tarpc = { version = "0.25.1", features = ['full'] }
