[package]
name = "bachelorthesis-prototype-configurator"
version = "0.1.0"
authors = ["Leo <lstwn@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exposurelib = { path = "../exposurelib" }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.61"
serde_yaml = "0.8.16"
serde = { version = "1.0.123", features = ["derive"] }
petgraph = { version = "0.5.1", features = [ "serde-1" ] }
