[package]
name = "configurator"
version = "0.1.0"
authors = ["Leo <lstwn@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exposurelib = { path = "../exposurelib" }
clap = "2.33.3"
chrono = { version = "0.4.19", features = ["serde"] }
serde_yaml = "0.8.16"
serde = { version = "1.0", features = ["derive"] }
petgraph = { version = "0.5.1", features = [ "serde-1" ] }
anyhow = "1.0.38"
thiserror = "1.0"
