[package]
name = "exposurelib"
version = "0.1.0"
authors = ["Leo <lstwn@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
ring = "0.16.20"
aes = "0.6.0"
aes-ctr = "0.6.0"
